# ONNX-GPU-Execution-Engine

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  COLAB_SETUP.md  LIMITATIONS.md  QUICKSTART.md  README.md  TOP_SECRET_LLAMA_EXEC.md  example_benchmark.json  results.json
scripts/: README.md  check_dependencies.sh  create_large_models.py  create_test_model.py  export_models.py  onnx_dump.py  requirements.txt  setup_colab.sh  setup_onnx_proto.sh  setup_third_party_libs.sh  validate_onnx.py  visualize_benchmark.py
src/: main.cpp
src/core/: graph.cpp  graph.hpp  model_parser.cpp  model_parser.hpp  node.cpp  node.hpp
src/gpu/: benchmark.cpp  benchmark.hpp  gpu_executor.cpp  gpu_executor.hpp
src/gpu/kernels/: add.cu  elementwise.cu  gather.cu  kernels.cuh  layernorm.cu  matmul.cu  reducemean.cu  relu.cu  sub.cu  tensor_ops.cu
src/gpu/ops/: executeAdd.inl  executeCast.inl  executeConcat.inl  executeConstantOfShape.inl  executeCos.inl  executeDiv.inl  executeEqual.inl  executeExpand.inl  executeGather.inl  executeGemm.inl  executeGreater.inl  executeGroupQueryAttention.inl  executeMatMul.inl  executeMul.inl  executeNeg.inl  executePow.inl  executeRange.inl  executeReLU.inl  executeReduceMean.inl  executeReduceSum.inl  executeReshape.inl  executeRotaryEmbedding.inl  executeScatterND.inl  executeShape.inl  executeSigmoid.inl  executeSimplifiedLayerNormalization.inl  executeSin.inl  executeSkipSimplifiedLayerNormalization.inl  executeSlice.inl  executeSoftmax.inl  executeSqrt.inl  executeSub.inl  executeTranspose.inl  executeTrilu.inl  executeUnsqueeze.inl  executeWhere.inl
src/utils/: logger.cpp  logger.hpp  tensor.cpp  tensor.hpp
visualization/: benchmark_viewer.html
